--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <title>Помогу вам списать оставшуюся сумму долга по кредиту</title>
 <h1 style="color: #5e9ca0;">Помогу вам выйти из кредита (как частное лицо) и забыть об оставшихся сумме долга</h1>
 <h2 style="color: #2e6c80;">Не банкротство</h2>
-<p>Привет! Меня зовут Михаил Фролов.<br />Я помогаю людям выходить из кредитных долгов частных лиц без уплаты остатков.</p>
+<p>Привет! <br />Я помогаю людям выходить из кредитных долгов частных лиц без уплаты остатков.</p>
 <p>Метод на 100% легальный, правовой и основан на знании и понимании принципов работы законодательной и финансовой систем РФ. Не банкротство. Скорее всего, вы про него никогда не слышали, т.к. он опасен для текущей банковской системы и его передают в основном через закрытые сообщества и из рук в руки.</p>
 <p>Работает следующим образом. В банках, перед которыми у вас есть задолжность, запрашивается набор определённых документов, которые они обязаны вам предоставить в рамках работы по вашим кредитным договорам. Набор этот нужен для подтверждения прав банка в принципе требовать с вас какие-либо средства. <br />Метод работает благодаря тому, что коммерческие банки под видом кредитов проворачивают незаконные схемы и сейчас они все делают так. Есть документы, подтверждающие прецеденты закрытия обязательств перед крупными банками. Это не единичные случаи.</p>
 <p>Метод довольно сложный. Для понимания его сути требуется глубоко погрузиться в суть схемы оплаты кредитных услуг (как она должна быть по действующим законам), много разных тонкостей и обмен правовыми документами с налоговой и банками. Иногда дело доходит до коллекторов и судов.</p>
