Page header corrected 2

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <title>Помогу вам списать оставшуюся сумму долга по кредиту</title>
-<h1 style="color: #5e9ca0;">Помогу вам выйти из кредита на частное лицо и забыть об оставшихся сумме долга</h1>
-<h2 style="color: #2e6c80;">Не банкротство</h2>
+<h1 style="color: #5e9ca0;">Помогу вам выйти из кредита и не выплачивать сумму оставшегося долга</h1>
+<h2 style="color: #2e6c80;">Для кредитов частных (физ.) лиц. Не банкротство.</h2>
 <p>Привет! <br />Я помогаю людям выходить из кредитных долгов частных лиц без уплаты остатков.</p>
 <p>Метод на 100% легальный, правовой и основан на знании и понимании принципов работы законодательной и финансовой систем РФ. Не банкротство. Скорее всего, вы про него никогда не слышали, т.к. он опасен для текущей банковской системы и его передают в основном через закрытые сообщества и из рук в руки.</p>
 <p>Работает следующим образом. В банках, перед которыми у вас есть задолжность, запрашивается набор определённых документов, которые они
