Yandex metrika counter added

--- a/uncredit.html
+++ b/uncredit.html
@@ -1,13 +1,1 @@
-<title>Помогу вам списать оставшуюся сумму долга по кредиту</title>
-<h1 style="color: #5e9ca0;">Помогу вам выйти из кредита и не выплачивать сумму оставшегося долга</h1>
-<h2 style="color: #2e6c80;">Для кредитов частных (физ.) лиц. Не банкротство.</h2>
-<p>Привет! <br />Я помогаю людям выходить из кредитных долгов частных лиц без уплаты остатков.</p>
-<p>Метод на 100% легальный, правовой и основан на знании и понимании принципов работы законодательной и финансовой систем РФ. Не банкротство. Скорее всего, вы про него никогда не слышали, т.к. он опасен для текущей банковской системы и его передают в основном через закрытые сообщества и из рук в руки.</p>
-<p>Работает следующим образом. В банках, перед которыми у вас есть задолжность, запрашивается набор определённых документов, которые они
-обязаны вам предоставить в рамках работы по вашим кредитным договорам. Набор этот нужен для подтверждения прав банка в принципе требовать с
-вас какие-либо средства. <br />Метод работает благодаря тому, что коммерческие банки под видом кредитов проворачивают незаконные схемы и
-сейчас они все делают так. Есть документы, подтверждающие прецеденты закрытия обязательств перед крупными банками. Это не единичные случаи.
-Также работает для займов в микрофинансовых организациях (МФО)</p>
-<p>Метод довольно сложный. Для понимания его сути требуется глубоко погрузиться в суть схемы оплаты кредитных услуг (как она должна быть по действующим законам), много разных тонкостей и обмен правовыми документами с налоговой и банками. Иногда дело доходит до коллекторов и судов.</p>
-<p>Но при настойчивом соблюдении принципов работы законов и понимании основания системы, всё работает безотказно. На любое противозаконное<br />действие коммерческого банка есть соответствующая гос. инстанция, которая его отымеет за нарушение и будет только рада вашей жалобе -<br />главное в каждом случае знать, чем ответить.</p>
-<p><br />Если вас заинтересовало предложение, звоните по телефону 8 910 467-26-34<br />Telegram <a href="https://t.me/michael_frolov1">https://t.me/michael_frolov1</a> (@michael_frolov1)<br />WhatsApp <a href="https://wa.me/79104672634">https://wa.me/79104672634</a></p>
+/home/mike/Dropbox/Docs/Проекты/GHPages/index.html
