--- a/index.html
+++ b/index.html
@@ -11,3 +11,19 @@
 <p>Метод довольно сложный. Для понимания его сути требуется глубоко погрузиться в суть схемы оплаты кредитных услуг (как она должна быть по действующим законам), много разных тонкостей и обмен правовыми документами с налоговой и банками. Иногда дело доходит до коллекторов и судов.</p>
 <p>Но при настойчивом соблюдении принципов работы законов и понимании основания системы, всё работает безотказно. На любое противозаконное<br />действие коммерческого банка есть соответствующая гос. инстанция, которая его отымеет за нарушение и будет только рада вашей жалобе -<br />главное в каждом случае знать, чем ответить.</p>
 <p><br />Если вас заинтересовало предложение, звоните по телефону 8 910 467-26-34<br />Telegram <a href="https://t.me/michael_frolov1">https://t.me/michael_frolov1</a> (@michael_frolov1)<br />WhatsApp <a href="https://wa.me/79104672634">https://wa.me/79104672634</a></p>
+
+<!-- Yandex.Metrika counter -->
+<script type="text/javascript" >
+   (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
+   m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
+   (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+
+   ym(75313201, "init", {
+        clickmap:true,
+        trackLinks:true,
+        accurateTrackBounce:true,
+        webvisor:true
+   });
+</script>
+<noscript><div><img src="https://mc.yandex.ru/watch/75313201" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+<!-- /Yandex.Metrika counter -->
