--- a/index.html
+++ b/index.html
@@ -27,3 +27,13 @@
 </script>
 <noscript><div><img src="https://mc.yandex.ru/watch/75313201" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
 <!-- /Yandex.Metrika counter -->
+
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-BKF5QKPSLL"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-BKF5QKPSLL');
+</script>
