Changed Telegram contact account

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 Также работает для займов в микрофинансовых организациях (МФО)</p>
 <p>Метод довольно сложный. Для понимания его сути требуется глубоко погрузиться в суть схемы оплаты кредитных услуг (как она должна быть по действующим законам), много разных тонкостей и обмен правовыми документами с налоговой и банками. Иногда дело доходит до коллекторов и судов.</p>
 <p>Но при настойчивом соблюдении принципов работы законов и понимании основания системы, всё работает безотказно. На любое противозаконное<br />действие коммерческого банка есть соответствующая гос. инстанция, которая его отымеет за нарушение и будет только рада вашей жалобе -<br />главное в каждом случае знать, чем ответить.</p>
-<p><br />Если вас заинтересовало предложение, звоните по телефону 8 910 467-26-34<br />Telegram <a href="https://t.me/michael_frolov1">https://t.me/michael_frolov1</a> (@michael_frolov1)<br />WhatsApp <a href="https://wa.me/79104672634">https://wa.me/79104672634</a></p>
+<p><br />Если вас заинтересовало предложение, звоните по телефону 8 910 467-26-34<br />Telegram <a href="https://t.me/free_from_credits">https://t.me/free_from_credits</a> (@free_from_credits)<br />WhatsApp <a href="https://wa.me/79104672634">https://wa.me/79104672634</a></p>
 
 <!-- Yandex.Metrika counter -->
 <script type="text/javascript" >
